# ag-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-build.yml  publish.yml
docs/skills/: token-obserabilty.md
scripts/: bump_version.py
src/ag_skill/: cli.py
src/ag_skill/commands/: add.py  doctor.py  install.py  list_cmd.py  remove.py  upgrade.py
src/ag_skill/core/: catalog.py  targets.py
src/ag_skill/skills/csharp-dotnet-standards/references/: README.md
src/ag_skill/skills/python-coding-standards/: SKILL.md
src/ag_skill/skills/python-coding-standards/references/: README.md
src/ag_skill/skills/react-frontend/scripts/: README.md
src/ag_skill/skills/token-observability/examples/: sample-context-report.md  sample-session-estimate.md
src/ag_skill/skills/token-observability/references/: context-surfaces.md  measurement-methodology.md  model-token-rates.md
src/ag_skill/skills/token-observability/scripts/: compare_before_after.py  estimate_prompt_tokens.py
src/ag_skill/skills/token-optimization/references/: README.md
src/ag_skill/skills/token-optimization/scripts/: token_audit.py
src/loom/: __init__.py  cli.py
src/loom/core/: catalog.py  installer.py  validator.py
src/loom/skills/csharp-dotnet-standards/: SKILL.md
src/loom/skills/csharp-dotnet-standards/scripts/: README.md
src/loom/skills/python-coding-standards/scripts/: README.md
src/loom/skills/react-frontend/: SKILL.md
src/loom/skills/react-frontend/references/: README.md
src/loom/skills/token-observability/: SKILL.md
src/loom/skills/token-observability/examples/: sample-before-after.md
src/loom/skills/token-observability/references/: report-format.md
src/loom/skills/token-observability/scripts/: analyze_context_size.py  generate_observability_report.py  scan_repo_context.py  session_cost_estimator.py
src/loom/skills/token-optimization/: SKILL.md
tests/: test_cli.py  test_validator.py
(+5 files in other folders)
