[project]
name = "ag-skill"
version = "0.1.4"
description = "Install curated AI agent skills into any repository"
readme = "README.md"
authors = [
    { name = "Shariq Khan", email = "shariqnasir@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "keyring>=25.7.0",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]


[project.scripts]
ag-skill = "ag_skill.cli:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ag_skill"
module-root = "src"
source-include = ["src/ag_skill/skills/**/*"]
wheel-include = ["src/ag_skill/skills/**/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py313"
